--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <!-- 主题样式 -->
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
   
+  <!-- 顶部横幅插件样式 -->
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-top-banner-plugin@latest/dist/style.css">
+  
   <!-- 自定义样式 -->
   <style>
     :root {
@@ -92,6 +95,13 @@
         color: "var(--theme-color,#42b983)",
         height: "3px",
       },
+      tabs: {
+        persist: true,
+        sync: true,
+        theme: 'classic',
+        tabComments: true,
+        tabHeadings: true
+      },
       search: {
         maxAge: 86400000, // 过期时间，单位毫秒，默认一天
         paths: 'auto',
@@ -135,6 +145,15 @@
         auto: true,
         lineNumbers: true,
         tabReplace: '  ',
+      },
+      // 顶部横幅配置
+      topBanner: {
+        content: '欢迎访问云栖谷服务器 Wiki！🎮 最新版本已更新，请查看更新日志了解详情。',
+        backgroundColor: '#deebff',
+        textColor: '#091E42',
+        position: 'fixed',
+        zIndex: '99',
+        textAlign: 'center'
       }
     };
   </script>
@@ -158,6 +177,15 @@
   
   <!-- 进度条插件 -->
   <script src="https://cdn.jsdelivr.net/npm/docsify-progress@latest/dist/progress.min.js"></script>
+  
+  <!-- 选项卡插件 -->
+  <script src="https://cdn.jsdelivr.net/npm/docsify-tabs@1"></script>
+  
+  <!-- 评论插件 -->
+  <script src="commento.js"></script>
+  
+  <!-- 顶部横幅插件 -->
+  <script src="https://cdn.jsdelivr.net/npm/docsify-top-banner-plugin@latest/dist/index.js"></script>
 </body>
 
 </html>
