修复top banner plugin显示异常，将zIndex改为数字类型，position改为relative，并添加defaultTag配置

--- a/index.html
+++ b/index.html
@@ -151,9 +151,10 @@
         content: '欢迎访问云栖谷服务器 Wiki！🎮 最新版本已更新，请查看更新日志了解详情。',
         backgroundColor: '#deebff',
         textColor: '#091E42',
-        position: 'fixed',
-        zIndex: '99',
-        textAlign: 'center'
+        position: 'relative',
+        zIndex: 99,
+        textAlign: 'center',
+        defaultTag: 'div'
       }
     };
   </script>
